nova_tests/plan124/neg/plan124_8_zero_on_move_duplicate_neg.nv
// EXPECT_COMPILE_ERROR duplicate
//
// Plan 124.8 [M-124.8-zero-on-move] — negative:
// duplicate `#zero_on_move` attributes — parser error.
module neg.plan124_8_zero_on_move_duplicate_neg

#zero_on_move
#zero_on_move
type Secret {
    mut key str
}
